Fonts installed in the user directory are not detected
Starting with Windows 1809, it is now possible to install fonts in the user directory without the requirement of having administration privileges but fontconfig seems don't search for it in C:\Users\Username\AppData\Local\Microsoft\Windows\Fonts
see gimp bug